2001-01-25  Larry Jones  <larry.jones@sdrc.com>

	* update.c (update_fileproc): Handle toss_local_changes in the
	T_NEEDS_MERGE case.
	(Inspired by Noel L Yap <yap_noel@jpmorgan.com>.)
	* sanity.sh (clean): New tests for above.

2001-01-23  Derek Price  <derek.price@openavenue.com>

	* run.c (run_exec): flush, if used, stderr and stdout before exit
	* server.c (cvs_flusherr): flush stderr & send a stderr flush command
	on the protocol pipe
	(cvs_flushout): like above, for stdout
	(do_cvs_command): handle flushes properly
	* sanity.sh (reserved): make the commitinfo script echo errors to
	stderr rather than stdin

2001-01-18  Larry Jones  <larry.jones@sdrc.com>

	* log.c (option_revlist, revlist, log_usage, cvslog,
	log_parse_revlist, log_expand_revlist, log_version_requested): Add
	support for :: for exclusive ranges.
	* admin.c (admin_usage): Reorder -o to be parallel to log -r.
	* sanity.sh (log): New tests for above.

2001-01-18  Derek Price  <derek.price@openavenue.com>

	* main.c: Add '2001' to the range of copyright years listed by the
	--version option
	* version.c.in (version): check current_parsed_root before its isremote
	member to avoid a core dump
	* sanity.sh (version): add a test for the version command

	* version.c: regenerated

2001-01-12  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c, rcs.h (RCS_lock, RCS_unlock): Use RCS_gettag to find the
	correct revision so that symbolic tags work correctly.  (This
	requires removing the "const" from the rev parameter since it's
	passed to RCS_gettag which might modify it.)
	(Reported by irina sturm <irina.sturm@st.com>.)

2001-01-11  Larry Jones  <larry.jones@sdrc.com>

	* run.c (close_on_exec): Remove check for FD_CLOEXEC.  As far as I
	can see, it's *never* been defined, which defeats the whole point.
	If F_SETFD is defined, it's probably safe to use it.

	* server.c (do_cvs_command): Call close_on_exec on the protocol and
	flow control pipes in the child process so they don't get inherited